Update the OneJar jar packaging code.